Исправляет ошибки оформления кода

--- a/source/less/blocks/page-cover.less
+++ b/source/less/blocks/page-cover.less
@@ -1,5 +1,5 @@
 .page-cover__image {
-  background: url(../img/bg-back-mobile@1x.jpg) no-repeat center;
+  background: url("../img/bg-back-mobile@1x.jpg") no-repeat center;
 }
 
 .page-cover__image--main-page {
