--- a/source/less/blocks/site-list.less
+++ b/source/less/blocks/site-list.less
@@ -9,6 +9,7 @@
   &:first-child {
     border-top: 1px solid @color-feature;
   }
+
   &:last-child {
     border-bottom: none;
     box-shadow: inset 0 -3px 4px rgba(0, 0, 0, 0.15);
@@ -16,9 +17,12 @@
   border-top: 1px solid #9ac2db;
   border-bottom: 1px solid #678fa8;
   background-color: @color-feature;
-  &:hover, :focus {
+
+  &:hover,
+  :focus {
     background-color: @button-hover;
   }
+
   &:active {
     background-color: @button-active;
   }
@@ -30,6 +34,7 @@
   .text-menu;
   color: @color-contrast;
   text-decoration: none;
+
   &:active {
     opacity: 0.3;
   }
