Вносит исправления отступов между блоками

--- a/source/less/blocks/features.less
+++ b/source/less/blocks/features.less
@@ -1,6 +1,4 @@
 .features__list {
-  display: flex;
-  flex-wrap: wrap;
   .list-style-none;
 }
 
@@ -15,27 +13,23 @@
 }
 
 .features__tile--top-feature {
-  padding-top: 30px;
-  padding-bottom: 25px;
+  padding-top: 39px;
+  padding-bottom: 40px;
   flex-basis: 100%;
   color: @color-contrast;
   background-color: @color-feature;
 }
 
-.features__item {
-  margin: 0 auto;
-}
-
 .features__item--additional {
-  padding: 18px @side-padding 13px;
+  padding: 27px @side-padding;
   flex-basis: 100%;
   text-align: center;
   background-color: #eeeeee;
 }
 
 .features__title {
-  margin: 9px 0;
   .text-title();
+  margin: 0;
 }
 
 .features__title--top-feature {
@@ -45,13 +39,13 @@
 .features__image {
   margin: 0 auto;
   height: 260px;
-  object-fit: cover;
+  width: auto;
 }
 
 .features__number {
-  margin: 0;
+  margin: 9px 0 0;
 }
 
 .features__description {
-  margin: 15px 0;
+  margin: 15px 0 0;
 }
