--- a/source/less/blocks/page-cover.less
+++ b/source/less/blocks/page-cover.less
@@ -1,17 +1,23 @@
+.page-cover__wrapper {
+  padding: 0 @side-padding 26px;
+}
+
+.page-cover__wrapper--main-page {
+  padding-bottom: 42px;
+}
+
 .page-cover__image {
   background: url("../img/bg-back-mobile@1x.jpg") no-repeat center;
 }
 
 .page-cover__image--main-page {
-  padding-top: 90px;
-  margin-bottom: 40px;
-  height: 299px;
+  padding: 90px 0 84px;
+  margin: 0 -20px 40px;
 }
 
 .page-cover__image--secondary-page {
-  padding-top: 52px;
-  margin-bottom: 38px;
-  height: 106px;
+  padding: 52px 0 66px;
+  margin: 0 -20px 38px;
 }
 
 .page-cover__logo {
@@ -20,17 +26,16 @@
 }
 
 .page-cover__title {
-  padding: 0 @side-padding;
   .text-title;
+  margin: 0;
 }
 
 .page-cover__description {
-  margin: 25px 0 26px;
-  padding: 0 @side-padding;
+  margin: 25px 0 0;
   line-height: @line-height-title;
   text-align: center;
 }
 
 .page-cover__description--main-page {
-  margin: 27px 0 42px;
+  margin: 27px 0 0;
 }
