--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -1,15 +1,17 @@
 .page-footer__wrapper {
-  padding: 0 @side-padding;
-  margin: 0 auto;
-  display: flex;
-  flex-direction: column;
+  padding: 36px @side-padding 27px;
 }
 
 .page-footer__hashtag {
-  margin: 36px 0;
   .text-extra;
+  margin: 0;
+}
+
+.page-footer__social {
+  .list-style-none;
+  margin-top: 36px;
 }
 
 .page-footer__copyright {
-  margin: 32px 0 30px;
+  margin: 43px 0 0;
 }
