--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -5,6 +5,9 @@
 
 .page-header__logo {
   margin: 0 auto -27px;
+  width: 102px;
+  height: 83px;
+  //размеры указаны для ie, иначе не центрирует
 }
 
 .page-header__logo-image {
