--- a/source/less/blocks/photo-item.less
+++ b/source/less/blocks/photo-item.less
@@ -1,14 +1,15 @@
 .photo-item__image {
   margin: 0;
   display: flex;
+  justify-content: center;
 }
 
 .photo-item__title {
-  margin: 15px 0 1px;
+  margin: 15px 0  0;
 }
 
 .photo-item__author {
-  margin: 0 0 8px;
+  margin: 1px 0 0;
   text-transform: none;
 }
 
@@ -19,7 +20,7 @@
 }
 
 .photo-item__like-count {
-  margin: 0 0 12px;
+  margin: 8px 0 0;
   font-weight: 700;
   color: @color-title;
 }
