--- a/source/less/blocks/scaffolding.less
+++ b/source/less/blocks/scaffolding.less
@@ -1,9 +1,9 @@
 body {
+  .text-base;
   min-width: 320px;
   margin: 0;
   padding: 0;
   font-family: "PT Sans", "Arial", sans-serif;
-  .text-base;
   background-color: #ffffff;
   text-transform: uppercase;
 }
@@ -11,4 +11,12 @@ body {
 img {
   max-width: 100%;
   height: auto;
+}
+
+.visually-hidden {
+  position: absolute;
+  clip: rect(0 0 0 0);
+  width: 1px;
+  height: 1px;
+  margin: -1px;
 }
