--- a/source/less/blocks/copyright.less
+++ b/source/less/blocks/copyright.less
@@ -4,6 +4,16 @@
   align-items: center;
 }
 
+.copyright__text {
+  margin: 0;
+}
+
 .copyright__link {
   margin-left: 7px;
+  text-decoration: none;
+  color: inherit;
+}
+
+.copyright__logo-image {
+  display: block;
 }
