--- a/source/less/blocks/recommended-list.less
+++ b/source/less/blocks/recommended-list.less
@@ -1,27 +1,24 @@
 .recommended-list {
   .list-style-none;
+  padding: 24px @side-padding 20px;
 }
 
 .recommended-list__item {
-  padding: 0 @side-padding;
-  margin-top: 17px;
+  padding: 11px 0 17px 50px;
+  width: 100%;
 
   &:first-child {
-    margin-top: 24px;
-  }
-
-  &:last-child {
-    margin-bottom: 37px;
+    margin: 0;
   }
 }
 
 .recommended-list__title {
-  margin: 11px 0 14px 50px;
   .text-title();
+  margin: 0;
   text-align: left;
 }
 
 .recommended-list__description {
-  margin: 0 0 0 50px;
+  margin: 14px 0 0 0;
   text-align: left;
 }
