--- a/source/less/blocks/site-list.less
+++ b/source/less/blocks/site-list.less
@@ -1,11 +1,13 @@
 .site-list {
   .list-style-none;
-  display: flex;
-  flex-direction: column;
   text-align: center;
 }
 
 .site-list__item {
+  border-top: 1px solid #9ac2db;
+  border-bottom: 1px solid #678fa8;
+  background-color: @color-feature;
+
   &:first-child {
     border-top: 1px solid @color-feature;
   }
@@ -14,12 +16,9 @@
     border-bottom: none;
     box-shadow: inset 0 -3px 4px rgba(0, 0, 0, 0.15);
   }
-  border-top: 1px solid #9ac2db;
-  border-bottom: 1px solid #678fa8;
-  background-color: @color-feature;
 
   &:hover,
-  :focus {
+  &:focus {
     background-color: @button-hover;
   }
 
@@ -29,9 +28,9 @@
 }
 
 .site-list__item a {
+  .text-menu;
   padding: 7px 0;
   display: block;
-  .text-menu;
   color: @color-contrast;
   text-decoration: none;
 
