Создаёт флекс-сетку основных блоков

--- a/source/less/blocks/copyright.less
+++ b/source/less/blocks/copyright.less
@@ -9,11 +9,14 @@
 }
 
 .copyright__link {
-  margin-left: 7px;
+  margin-left: 6px;
+  margin-right: -5px;
   text-decoration: none;
   color: inherit;
 }
 
 .copyright__logo-image {
   display: block;
+  width: 34px;
+  height: 34px;
 }
