--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,6 +1,7 @@
 @import "variables.less";
 @import "mixins.less";
 @import "blocks/scaffolding.less";
+@import "blocks/main-nav";
 @import "blocks/page-header.less";
 @import "blocks/site-list.less";
 @import "blocks/page-cover.less";
