--- a/source/less/blocks/page-cover.less
+++ b/source/less/blocks/page-cover.less
@@ -1,3 +1,7 @@
+.page-cover {
+  background-color: #ffffff;
+}
+
 .page-cover__wrapper {
   padding: 0 @side-padding 26px;
 }
@@ -27,15 +31,83 @@
 
 .page-cover__title {
   .text-title;
-  margin: 0;
+  margin: 0 auto;
+  max-width: 500px;
 }
 
 .page-cover__description {
-  margin: 25px 0 0;
+  margin: 25px auto 0;
+  max-width: 648px;
   line-height: @line-height-title;
   text-align: center;
+
+  & br {
+    display: none;
+  }
 }
 
 .page-cover__description--main-page {
-  margin: 27px 0 0;
+  margin: 27px auto 0;
+}
+
+@media (min-width: 768px) {
+  .page-cover__wrapper {
+    padding-bottom: 68px;
+  }
+
+  .page-cover__wrapper--main-page {
+    padding-bottom: 50px;
+  }
+
+  .page-cover__image {
+    background: url("../img/bg-back-tablet@1x.jpg") no-repeat center;
+    background-size: cover;
+  }
+
+  .page-cover__image--secondary-page {
+    padding: 95px 0 119px;
+  }
+
+  .page-cover__image--main-page {
+    padding: 77px 0 91px;
+    margin-bottom: 50px;
+  }
+
+  .page-cover__logo {
+    width: 460px;
+    height: 350px;
+  }
+
+  .page-cover__image--secondary-page .page-cover__logo {
+    width: 458px;
+    height: 78px;
+  }
+
+  .page-cover__title {
+    font-size: @font-size-extra;
+  }
+
+  .page-cover__title--secondary-page {
+    font-size: 30px;
+  }
+
+  .page-cover__description br {
+    display: inline;
+  }
+
+  .page-cover__description--main-page {
+    margin-top: 28px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .page-cover {
+    margin: 0 auto;
+    max-width: 1200px;
+  }
+
+  .page-cover__image {
+    background: url("../img/bg-back-desktop@1x.jpg") no-repeat center;
+    background-size: cover;
+  }
 }
