--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -1,3 +1,7 @@
+.page-footer {
+  background-color: #ffffff;
+}
+
 .page-footer__wrapper {
   padding: 36px @side-padding 27px;
 }
@@ -14,4 +18,34 @@
 
 .page-footer__copyright {
   margin: 43px 0 0;
+}
+
+@media (min-width: 768px) {
+  .page-footer__wrapper {
+    padding: 36px 60px 36px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    max-width: 648px;
+  }
+
+  .page-footer__social {
+    margin-top: 0;
+  }
+
+  .page-footer__copyright {
+    margin-top: 0;
+  }
+}
+
+@media (min-width: 1200px) {
+  .page-footer {
+    margin: 0 auto;
+    max-width: 1200px;
+  }
+
+  .page-footer__wrapper {
+    max-width: 1200px;
+  }
 }
