--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -1,15 +1,38 @@
+.page-header {
+  background-color: #ffffff;
+}
+
 .page-header__wrapper {
   display: flex;
   flex-direction: column-reverse;
 }
 
-.page-header__logo {
+.page-header__logo-image {
   margin: 0 auto -27px;
+  display: block;
   width: 102px;
   height: 83px;
-  //размеры указаны для ie, иначе не центрирует
 }
 
-.page-header__logo-image {
-  display: block;
+@media (min-width: 768px) {
+  .page-header__wrapper {
+    flex-direction: column;
+  }
+
+  .page-header__logo-image {
+    margin-bottom: -83px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .page-header {
+    margin: 0 auto;
+    max-width: 1200px;
+  }
+
+  .page-header__logo-image {
+    margin-bottom: -96px;
+    width: 188px;
+    height: 96px;
+  }
 }
