--- a/source/less/blocks/photo-item.less
+++ b/source/less/blocks/photo-item.less
@@ -1,11 +1,16 @@
 .photo-item__image {
-  margin: 0;
-  display: flex;
-  justify-content: center;
+  margin: 0 auto;
+  max-width: 280px;
+}
+
+.photo-item__image img {
+  display: block;
 }
 
 .photo-item__title {
   margin: 15px 0  0;
+  font-weight: 700;
+  color: @color-title;
 }
 
 .photo-item__author {
@@ -23,4 +28,56 @@
   margin: 8px 0 0;
   font-weight: 700;
   color: @color-title;
+}
+
+@media (min-width: 768px) {
+  .photo-item {
+    background-color: #f2f2f2;
+
+    &:nth-child(odd) {
+      background-color: #eaeaea;
+    }
+
+    &:first-child {
+      background-color: #f2f2f2;
+    }
+  }
+
+  .photo-item__image {
+    position: relative;
+    margin: 0 auto;
+    max-width: 648px;
+  }
+
+  .photo-item__info {
+    padding: 15px 20px 17px;
+  }
+
+  .photo-item__title {
+    margin: 0;
+  }
+
+  .photo-item__like-btn {
+    position: absolute;
+    bottom: 30px;
+    right: 30px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .photo-item__image {
+    max-width: 1200px;
+  }
+
+  .photo-item__info {
+    position: relative;
+    margin-top: -81px;
+    background-color: rgba(0, 0, 0, 0.3);
+  }
+
+  .photo-item__title,
+  .photo-item__author,
+  .photo-item__like-count {
+    color: @color-contrast;
+  }
 }
