--- a/source/less/blocks/scaffolding.less
+++ b/source/less/blocks/scaffolding.less
@@ -4,7 +4,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: "PT Sans", "Arial", sans-serif;
-  background-color: #ffffff;
+  background-color: #f2f2f2;
   text-transform: uppercase;
 }
 
