--- a/source/less/blocks/photo-gallery.less
+++ b/source/less/blocks/photo-gallery.less
@@ -18,7 +18,7 @@
   }
 }
 
-@media (min-width: 768px) {
+@media (min-width: @tablet-width) {
   .photo-gallery__tiles {
     margin: 0 auto;
     display: flex;
@@ -43,7 +43,7 @@
   }
 }
 
-@media (min-width: 1200px) {
+@media (min-width: @desktop-width) {
   .photo-gallery {
     margin: 0 auto;
     max-width: 1200px;
