--- a/source/less/blocks/photo-item.less
+++ b/source/less/blocks/photo-item.less
@@ -30,7 +30,7 @@
   color: @color-title;
 }
 
-@media (min-width: 768px) {
+@media (min-width: @tablet-width) {
   .photo-item {
     background-color: #f2f2f2;
 
@@ -64,7 +64,7 @@
   }
 }
 
-@media (min-width: 1200px) {
+@media (min-width: @desktop-width) {
   .photo-item__image {
     max-width: 1200px;
   }
