--- a/source/less/blocks/scaffolding.less
+++ b/source/less/blocks/scaffolding.less
@@ -20,3 +20,13 @@ img {
   height: 1px;
   margin: -1px;
 }
+
+html {
+  box-sizing: border-box;
+}
+
+*,
+*::after,
+*::before {
+  box-sizing: inherit;
+}
