--- a/source/less/mixins.less
+++ b/source/less/mixins.less
@@ -19,7 +19,7 @@
   font-weight: 700;
 }
 
-.text-extra {
+.text-extra() {
   font-size: @font-size-extra;
   line-height: @line-height-title;
   font-weight: 700;
