--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -7,31 +7,36 @@
   flex-direction: column-reverse;
 }
 
-.page-header__logo-image {
+.page-header__logo {
+  position: relative;
+  z-index: 2;
   margin: 0 auto -27px;
+  width: 102px;
+}
+
+.page-header__logo-image {
   display: block;
   width: 102px;
   height: 83px;
 }
 
-@media (min-width: 768px) {
+@media (min-width: @tablet-width) {
   .page-header__wrapper {
     flex-direction: column;
   }
 
-  .page-header__logo-image {
+  .page-header__logo {
     margin-bottom: -83px;
   }
 }
 
-@media (min-width: 1200px) {
-  .page-header {
-    margin: 0 auto;
-    max-width: 1200px;
+@media (min-width: @desktop-width) {
+  .page-header__logo {
+    margin-bottom: -96px;
+    width: 188px;
   }
 
   .page-header__logo-image {
-    margin-bottom: -96px;
     width: 188px;
     height: 96px;
   }
