Добавляет декоративные элементы и резину

--- a/source/less/blocks/copyright.less
+++ b/source/less/blocks/copyright.less
@@ -10,15 +10,24 @@
 
 .copyright__link {
   margin-left: 6px;
-  margin-right: -5px;
   text-decoration: none;
   color: inherit;
 }
 
 .copyright__logo-image {
   display: block;
-  width: 34px;
+  width: 27px;
   height: 34px;
+
+  &:hover,
+  &:focus {
+    fill: @color-feature;
+  }
+
+  &:active {
+    fill: #000000;
+    opacity: 0.3;
+  }
 }
 
 @media (min-width: @tablet-width) {
