--- a/source/less/blocks/find-hotel.less
+++ b/source/less/blocks/find-hotel.less
@@ -23,18 +23,10 @@
   }
 }
 
-.find-hotel__btn {
-  display: block;
+.find-hotel__btn-wrapper {
   padding: 16px 0;
   margin: 35px auto 0;
   max-width: 280px;
-  font-size: @font-size-extra;
-  line-height: @line-height-title;
-  font-weight: 700;
-  color: @color-contrast;
-  text-align: center;
-  text-decoration: none;
-  background-color: #81b3d2;
 }
 
 @media (min-width: @tablet-width) {
@@ -55,7 +47,7 @@
     }
   }
 
-  .find-hotel__btn {
+  .find-hotel__btn-wrapper {
     margin-top: 42px;
     max-width: 458px;
   }
