--- a/source/less/blocks/site-list.less
+++ b/source/less/blocks/site-list.less
@@ -80,4 +80,17 @@
       color: #000000;
     }
   }
+
+  .site-list__item--active a {
+    color: #766357;
+
+    &:hover,
+    &:focus {
+      color: #604e43;
+    }
+
+    &:active {
+      color: #766357;
+    }
+  }
 }
