--- a/source/less/style.less
+++ b/source/less/style.less
@@ -16,3 +16,4 @@
 @import "blocks/page-footer.less";
 @import "blocks/social.less";
 @import "blocks/copyright.less";
+@import "blocks/button.less";
