--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -1,3 +1,28 @@
+.main-nav {
+  position: relative;
+}
+
+.main-nav__menu-btn {
+  position: absolute;
+  bottom: -40px;
+  right: 20px;
+  width: 23px;
+  height: 22px;
+  border: 0;
+  background: url("../../img/icon-menu.svg") no-repeat center;
+}
+
+.main-nav__menu-btn::before {
+  content: "";
+  position: absolute;
+  top: -224px;
+  right: 0;
+  display: block;
+  width: 23px;
+  height: 22px;
+  background: url("../../img/icon-cross.svg") no-repeat center;
+}
+
 @media (min-width: @tablet-width) {
   .main-nav__menu-btn {
     display: none;
