Вносит исправления декоративных  элементов
Правит мобильное меню, добавляет на него скрипт
Изменяет микросетку социальных иконок
Исправляет блоки с картинками на главной странице
Возвращает в поток кнопку лайн на странице с фото

--- a/source/less/blocks/find-hotel.less
+++ b/source/less/blocks/find-hotel.less
@@ -3,13 +3,11 @@
 }
 
 .find-hotel__wrapper {
-  padding: 30px 20px 49px;
+  padding: 28px 20px 49px;
 }
 
 .find-hotel__title {
-  .text-extra;
-  margin: -2px 0 0;
-  text-align: center;
+  margin: 0;
 }
 
 .find-hotel__description {
@@ -24,22 +22,17 @@
 }
 
 .find-hotel__btn-wrapper {
-  padding: 16px 0;
   margin: 35px auto 0;
   max-width: 280px;
 }
 
 @media (min-width: @tablet-width) {
   .find-hotel__wrapper {
-    padding-top: 55px;
-  }
-
-  .find-hotel__title {
-    font-size: 30px;
+    padding: 55px 20px 58px;
   }
 
   .find-hotel__description {
-    margin-top: 27px;
+    margin-top: 31px;
     max-width: 458px;
 
     & br {
@@ -57,5 +50,17 @@
   .find-hotel {
     margin: 0 auto;
     max-width: 1200px;
+  }
+
+  .find-hotel__wrapper {
+    padding-bottom: 66px;
+  }
+
+  .find-hotel__btn-wrapper {
+    margin-top: 43px;
+  }
+
+  .find-hotel__description {
+    margin-top: 35px;
   }
 }
