--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -30,18 +30,18 @@
   }
 
   .page-footer__hashtag {
-    width: calc(100% / 3);
+    width: 33.333333%;
     text-align: left;
   }
 
   .page-footer__social {
     margin-top: 0;
-    width: calc(100% / 3);
+    width: 33.333333%;
   }
 
   .page-footer__copyright {
     margin-top: 0;
-    width: calc(100% / 3);
+    width: 33.333333%;
   }
 }
 
