--- a/source/less/blocks/recommended-list.less
+++ b/source/less/blocks/recommended-list.less
@@ -60,7 +60,7 @@
 
   .recommended-list__item {
     padding: 159px 45px 61px;
-    width: calc(100% / 3 - 0.1px); //0.1px из-за бага в ie
+    width: 33.333333%;
     min-height: 330px;
   }
 
