--- a/source/less/variables.less
+++ b/source/less/variables.less
@@ -6,6 +6,7 @@
 @color-feature: #81b3d2;
 @button-hover: #669ec0;
 @button-active: #5496bd;
+@button-disabled: #e5e5e5;
 @font-size-base: 14px;
 @font-size-title: 18px;
 @font-size-extra: 21px;
