--- a/source/less/blocks/features.less
+++ b/source/less/blocks/features.less
@@ -51,10 +51,9 @@
   display: none;
 }
 
-.features__image {
+.features__image img {
   margin: 0 auto;
   display: block;
-  height: 260px;
   width: auto;
 }
 
@@ -69,16 +68,21 @@
 @media (min-width: @tablet-width) {
   .features__container {
     display: flex;
-
-    & picture {
-      width: calc(100% / 3 * 2 - 0.1px);
-    }
+    min-height: 256px;
+    overflow: hidden;
   }
 
   .features__image {
+    position: relative;
+    width: 66.666666%;
+    display: flex;
+  }
+
+  .features__image img {
+    position: absolute;
+    align-self: center;
     width: 100%;
-    height: 256px;
-    object-fit: cover;
+    min-height: 256px;
   }
 
   .features__list {
@@ -98,7 +102,7 @@
 
   .features__item--additional {
     padding: 45px 40px 44px;
-    width: calc(100% / 3 - 0.1px); //0.1px из-за бага в ie
+    width: 33.333333%;
     min-height: 256px;
     background-color: #eeeeee;
   }
@@ -112,7 +116,8 @@
   }
 
   .features__tile--top-feature {
-    width: calc(100% / 3 - 0.1px);
+    width: 33.333333%;
+    min-height: 256px;
   }
 
   .features__title {
@@ -133,10 +138,6 @@
 }
 
 @media (min-width: @desktop-width) {
-  .features__image {
-    min-width: 800px;
-  }
-
   .features__item--additional {
     padding: 45px 50px 44px;
   }
