--- a/source/less/blocks/photo-gallery.less
+++ b/source/less/blocks/photo-gallery.less
@@ -29,7 +29,7 @@
   .photo-gallery__tile {
     padding: 0;
     margin: 0;
-    width: calc(100% / 2 - 0.1px);
+    width: 50%;
     border: none;
     background-color: #f2f2f2;
 
@@ -37,15 +37,15 @@
       background-color: #eaeaea;
     }
 
-    &:first-child {
-      margin: 0 auto;
-      width: 100%;
-      background-color: #f2f2f2;
-    }
-
     &:last-child {
       border: none;
     }
+  }
+
+  .photo-gallery__tile.photo-gallery__tile--wide {
+    margin: 0 auto;
+    width: 100%;
+    background-color: #f2f2f2;
   }
 }
 
@@ -60,6 +60,6 @@
   }
 
   .photo-gallery__tile {
-    width: calc(100% / 3 - 0.1px);
+    width: 33.333333%;
   }
 }
