--- a/source/less/style.less
+++ b/source/less/style.less
@@ -13,6 +13,7 @@
 @import "blocks/recommended-list.less";
 @import "blocks/photo-gallery.less";
 @import "blocks/photo-item.less";
+@import "blocks/final-question.less";
 @import "blocks/page-footer.less";
 @import "blocks/social.less";
 @import "blocks/copyright.less";
