--- a/source/less/blocks/page-cover.less
+++ b/source/less/blocks/page-cover.less
@@ -28,6 +28,12 @@
   background: url("../img/bg-back-mobile@1x.jpg") no-repeat center;
 }
 
+@media (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
+  .page-cover__image {
+    background-image: url("../img/bg-back-mobile@2x.jpg");
+  }
+}
+
 .page-cover__image::before {
   content: "";
   position: absolute;
@@ -98,10 +104,15 @@
   }
 
   .page-cover__image {
-    background: url("../img/bg-back-tablet@1x.jpg") no-repeat center;
+    background-image: url("../img/bg-back-tablet@1x.jpg");
     background-size: cover;
   }
 
+  @media (min-width: @tablet-width) and (min-resolution: 144dpi), (min-width: @tablet-width) and (min-resolution: 1.5dppx) {
+    .page-cover__image {
+      background-image: url("../img/bg-back-tablet@2x.jpg");
+    }
+  }
 
   .page-cover__image::before {
     left: calc(50% - 351px);
@@ -147,7 +158,12 @@
 
 @media (min-width: @desktop-width) {
   .page-cover__image {
-    background: url("../img/bg-back-desktop@1x.jpg") no-repeat center;
-    background-size: cover;
+    background-image: url("../img/bg-back-desktop@1x.jpg");
+  }
+
+  @media (min-width: @desktop-width) and (min-resolution: 144dpi), (min-width: @desktop-width) and (min-resolution: 1.5dppx) {
+    .page-cover__image {
+      background-image: url("../img/bg-back-desktop@2x.jpg");
+    }
   }
 }
