Вносит исправления подключения картинок

--- a/source/less/blocks/location.less
+++ b/source/less/blocks/location.less
@@ -22,7 +22,7 @@
   display: block;
   width: 27px;
   height: 27px;
-  background: url("../img/icon-map-marker.svg");
+  background: url("/img/icon-map-marker.svg");
 }
 
 @media (min-width: @tablet-width) {
