--- a/source/less/variables.less
+++ b/source/less/variables.less
@@ -1,5 +1,7 @@
 @tablet-width: 768px;
 @desktop-width: 1200px;
+@dpi-2x: 144dpi;
+@dppx-2x: 1.5dppx;
 @color-base: #333333;
 @color-title: #000000;
 @color-contrast: #ffffff;
