--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -9,11 +9,11 @@
   width: 23px;
   height: 22px;
   border: 0;
-  background: url("../../img/icon-cross.svg") no-repeat center;
+  background: url("/img/icon-cross.svg") no-repeat center;
 }
 
 .main-nav--closed .main-nav__menu-btn {
-  background: url("../../img/icon-menu.svg") no-repeat center;
+  background: url("/img/icon-menu.svg") no-repeat center;
 }
 
 .main-nav--nojs .main-nav__menu-btn {
