--- a/source/less/blocks/page-cover.less
+++ b/source/less/blocks/page-cover.less
@@ -25,12 +25,10 @@
 .page-cover__image {
   position: relative;
   overflow: hidden;
-  background: url("../img/bg-back-mobile@1x.jpg") no-repeat center;
-}
+  background: url("/img/bg-back-mobile@1x.jpg") no-repeat center;
 
-@media (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
-  .page-cover__image {
-    background-image: url("../img/bg-back-mobile@2x.jpg");
+  @media (min-resolution: @dpi-2x), (min-resolution: @dppx-2x) {
+    background-image: url("/img/bg-back-mobile@2x.jpg");
   }
 }
 
@@ -104,13 +102,11 @@
   }
 
   .page-cover__image {
-    background-image: url("../img/bg-back-tablet@1x.jpg");
+    background-image: url("/img/bg-back-tablet@1x.jpg");
     background-size: cover;
-  }
 
-  @media (min-width: @tablet-width) and (min-resolution: 144dpi), (min-width: @tablet-width) and (min-resolution: 1.5dppx) {
-    .page-cover__image {
-      background-image: url("../img/bg-back-tablet@2x.jpg");
+    @media (min-resolution: @dpi-2x), (min-resolution: @dppx-2x) {
+      background-image: url("/img/bg-back-tablet@2x.jpg");
     }
   }
 
@@ -158,12 +154,10 @@
 
 @media (min-width: @desktop-width) {
   .page-cover__image {
-    background-image: url("../img/bg-back-desktop@1x.jpg");
-  }
+    background-image: url("/img/bg-back-desktop@1x.jpg");
 
-  @media (min-width: @desktop-width) and (min-resolution: 144dpi), (min-width: @desktop-width) and (min-resolution: 1.5dppx) {
-    .page-cover__image {
-      background-image: url("../img/bg-back-desktop@2x.jpg");
+    @media (min-resolution: @dpi-2x), (min-resolution: @dppx-2x) {
+      background-image: url("/img/bg-back-desktop@2x.jpg");
     }
   }
 }
