--- a/source/less/blocks/recommended-list.less
+++ b/source/less/blocks/recommended-list.less
@@ -28,17 +28,17 @@
 }
 
 .recommended-list__item--lodging .recommended-list__title::before {
-  background: url("../../img/icon-house.svg") no-repeat center;
+  background: url("/img/icon-house.svg") no-repeat center;
   background-size: 39px 37px;
 }
 
 .recommended-list__item--souvenirs .recommended-list__title::before {
-  background: url("../../img/icon-gift.svg") no-repeat center;
+  background: url("/img/icon-gift.svg") no-repeat center;
   background-size: 32px 38px;
 }
 
 .recommended-list__item--food .recommended-list__title::before {
-  background: url("../../img/icon-burger.svg") no-repeat center;
+  background: url("/img/icon-burger.svg") no-repeat center;
   background-size: 40px 35px;
 }
 
