--- a/source/less/blocks/scaffolding.less
+++ b/source/less/blocks/scaffolding.less
@@ -1,15 +1,15 @@
 @font-face {
   font-weight: normal;
-  font-family: "PT Sans Narrow";
+  font-family: "PT Sans";
   font-style: normal;
-  src: url("../../fonts/ptsans.woff2") format("woff2"), url("../../fonts/ptsans.woff") format("woff");
+  src: url("/fonts/ptsans.woff2") format("woff2"), url("/fonts/ptsans.woff") format("woff");
 }
 
 @font-face {
   font-weight: bold;
-  font-family: "PT Sans Narrow";
+  font-family: "PT Sans";
   font-style: normal;
-  src: url("../../fonts/ptsansbold.woff2") format("woff2"), url("../../fonts/ptsansbold.woff") format("woff");
+  src: url("/fonts/ptsansbold.woff2") format("woff2"), url("/fonts/ptsansbold.woff") format("woff");
 }
 
 body {
