--- a/source/less/blocks/scaffolding.less
+++ b/source/less/blocks/scaffolding.less
@@ -2,6 +2,7 @@
   font-weight: normal;
   font-family: "PT Sans";
   font-style: normal;
+  font-display: swap;
   src: url("/fonts/ptsans.woff2") format("woff2"), url("/fonts/ptsans.woff") format("woff");
 }
 
@@ -9,6 +10,7 @@
   font-weight: bold;
   font-family: "PT Sans";
   font-style: normal;
+  font-display: swap;
   src: url("/fonts/ptsansbold.woff2") format("woff2"), url("/fonts/ptsansbold.woff") format("woff");
 }
 
