--- a/source/less/blocks/video.less
+++ b/source/less/blocks/video.less
@@ -16,7 +16,6 @@
   position: absolute;
   top: -45px;
   left: 0;
-  z-index: 2;
   padding: 22px 22px 20px;
   max-width: 280px;
   background-color: rgba(0, 0, 0, 0.6);
@@ -88,7 +87,7 @@
   }
 
   .video__volume-scale-container {
-    position: unset;
+    position: static;
     padding: 45px 0;
     margin: 0 30px 0 22px;
     max-width: 390px;
