Изменяет размеры и отступы элементов страницы форм
Устанавливает размерности близкие к макетным
Добавляет иконки телефона и почты в соответствующие формы

--- a/source/less/blocks/button.less
+++ b/source/less/blocks/button.less
@@ -1,6 +1,7 @@
 .button {
   padding: 16px 0;
   display: block;
+  border: none;
   font-size: @font-size-extra;
   line-height: @line-height-title;
   font-weight: 700;
