--- a/source/less/blocks/page-cover.less
+++ b/source/less/blocks/page-cover.less
@@ -105,6 +105,10 @@
     padding-bottom: 50px;
   }
 
+  .page-cover__wrapper--forms {
+    padding-bottom: 56px;
+  }
+
   .page-cover__image {
     background-image: url("/img/bg-back-tablet@1x.jpg");
     background-size: cover;
