--- a/source/less/blocks/input-field.less
+++ b/source/less/blocks/input-field.less
@@ -20,19 +20,82 @@
 
 .input-field__string {
   flex-grow: 1;
-  padding: 21px 21px 20px;
+  padding: 12px 18px;
   width: 140px;
-  border: none;
+  border: 4px solid #f2f2f2;
   background-color: #f2f2f2;
+  font-size: @font-size-title;
+  line-height: @line-height-title;
+  font-weight: 700;
 
   &::placeholder {
-    font-size: @font-size-title;
-    line-height: @line-height-title;
     color: @color-title;
-    font-weight: 700;
   }
+
+  &:hover {
+    border-color: #e5e5e5;
+    background-color: #e5e5e5;
+    outline: 0;
+  }
+
+  &:focus,
+  &active {
+    border-color: #e5e5e5;
+    background-color: #ffffff;
+    outline: 0;
+  }
+}
+
+.feedback__form-wrapper--contacts .input-field__string {
+  margin-top: 7px;
+  padding-right: 58px;
+}
+
+.input-field--tel,
+.input-field--email {
+  position: relative;
+}
+
+.feedback__form-wrapper--contacts .input-field::after {
+  content: "";
+  position: absolute;
+  top: 33px;
+  right: 0;
+  display: block;
+  width: 58px;
+  height: 58px;
+  background-color: #e6e6e6;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.input-field--tel::after {
+  background-image: url("/img/icon-phone.svg");
+}
+
+.input-field--email::after {
+  background-image: url("/img/icon-mail.svg");
 }
 
 .input-field__string--textarea {
   min-height: 160px;
+}
+
+@media (min-width: @desktop-width) {
+  .feedback__form-wrapper--contacts .input-field {
+    margin-top: 74px;
+
+    &:first-of-type {
+      margin-top: 74px;
+    }
+  }
+
+  .feedback__form-wrapper--contacts .input-field__string {
+    margin-top: 0;
+    min-width: 315px;
+  }
+
+  .feedback__form-wrapper--contacts .input-field::after {
+    top: 0;
+  }
 }
